# cipherflow

./: .dockerignore  .env.example  .env.production  .gitignore  API_VERSIONING.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt  test_output.txt
.githooks/: pre-commit
.github/workflows/: ci_cd_pipeline.yml  deploy.yaml  image-scan.yml  security-scan.yml
docs/: API_EXAMPLES.md  COST_ESTIMATION.md  DISASTER_RECOVERY.md  RUNBOOK.md  SLA.md  TESTING_STRATEGY.md
frontend/: Dockerfile  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: api.ts
infrastructure/: backend.tf  main.tf  security.tf  terraform.tfvars.example  variables.tf
k8s/: annotations.yaml  api-deployment.yaml  configmap.yaml  deployment.yaml  frontend-deployment.yaml  hpa.yaml  ingress.yaml  network-policy.yaml  pdb.yaml  pod-security-policy.yaml  resource-quota.yaml  secrets.yaml  service-account.yaml  service-mesh-annotations.yaml  service.yaml  topology.yaml
scripts/: benchmark.py  docker-test.sh
src/: main.py
src/api/: dependencies.py  routes.py
src/core/: config.py  deprecation.py  errors.py  logging.py  middleware.py  profiles.py  rate_limit.py  response.py  security_utils.py  shutdown.py  size_limit.py  timing.py  validators.py
src/services/: classification.py  data_processor.py  sanitizer.py
tests/features/: environment.py  secure_processing.feature
tests/integration/: test_api_routes.py
(+4 files in other folders)
